--- a/www/css/main.css
+++ b/www/css/main.css
@@ -11,8 +11,8 @@
 }
 
 :root {
-  --primary: #ffcc00; /*#17499b;*/
-  --secondary: #6B6570; /*#339df5;*/
+  --primary: #ffcc00;
+  --secondary: #6B6570;
   --background: #ededed;
   --dark: #282727;
   --light: #fff;
@@ -44,7 +44,21 @@ body {
   text-align: center;
 }
 
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.center {
+  margin: 0 auto;
+  text-align: center;
+}
+
 /* BUTTONS */
+
 button {
   font-size: 40px;
   color: var(--secondary);
@@ -60,12 +74,50 @@ button:active {
   -webkit-transform: scale3d(0.9, 0.9, 1);
 }
 
-.center {
-  margin: 0 auto;
+.number {
+  box-shadow: var(--primary) 0 0 1px 1px;
+  font-size: 3em;
+}
+
+.clear {
+  font-size: 1.5em;
+  box-shadow: var(--red) 0 0 1px 1px;
+}
+
+.enter {
+  font-size: 1.5em;
+  box-shadow: var(--green) 0 0 1px 1px;
+}
+
+.button {
+  background: var(--background);
+  color: var(--secondary);
+  border: none;
+  border-radius: 50%;
   text-align: center;
+  width: 24vw;
+  height: 24vw;
+  margin: 1vw 1vw;
+  padding: 0;
+}
+
+.button:active {
+  background: var(--primary);
+  color: #fff;
+}
+
+.clear:active {
+  background: var(--red);
+  color: #fff;
+}
+
+.enter:active {
+  background: var(--green);
+  color: #fff;
 }
 
 /* COLORS */
+
 .dark {
   color: var(--dark);
 }
@@ -83,6 +135,7 @@ button:active {
 }
 
 /* TEXT */
+
 h1 {
   font-size: 40px;
   text-align: center;
@@ -131,6 +184,7 @@ h1 {
 }
 
 /* IMAGES */
+
 img {
   display: block;
   margin: 0 auto;
@@ -149,9 +203,11 @@ img.nfc {
 }
 
 /* ANIMATIONS */
+
 .fade-enter-active {
   transition: all .3s ease;
 }
+
 .fade-leave-active {
   transition: opacity 0s;
 }
@@ -161,65 +217,49 @@ img.nfc {
   transform: translateX(10px);
 }
 
-/* NUMBER PAD */
-#form input:focus,
-#form select:focus,
-#form textarea:focus,
-#form button:focus {
-	outline: none;
-}
-.box {
-  background: var(--background);
-	margin: 2%;
-	width: 80%;
-	font-size: 3em;
-	text-align: center;
-	border: 1px solid #d5d5d5;
-  border-radius: 10px;
-}
-.number {
-	box-shadow: var(--primary) 0 0 1px 1px;
-	font-size: 3em;
-}
-.clear {
-	font-size: 1.5em;
-	box-shadow: var(--red) 0 0 1px 1px;
-}
-.enter {
-	font-size: 1.5em;
-	box-shadow: var(--green) 0 0 1px 1px;
-}
-.button {
-	background: var(--background);
-	color: var(--secondary);
-	border: none;
-	border-radius: 50%;
-	text-align: center;
-	width: 24vw;
-	height: 24vw;
-	margin: 1vw 1vw;
-	padding: 0;
-}
-.button:active {
-	background: var(--primary);
-	color: #fff;
-}
-.clear:active {
-	background: var(--red);
-	color: #fff;
-}
-.enter:active {
-	background: var(--green);
-	color: #fff;
+/* FORM */
+
+form input:focus, form select:focus, form textarea:focus, form button:focus {
+  outline: none;
 }
 
-/* SETTINGS FORM */
-.formbox {
+.input {
+  margin: 2%;
   background: var(--background);
-	margin: 2% 2% 10% 2%;
-	width: 80%;
-	font-size: 1.5em;
-	border: 1px solid #d5d5d5;
+  width: 80%;
+  border: 1px solid #d5d5d5;
   border-radius: 10px;
+}
+
+.pad {
+  font-size: 3em;
+  text-align: center;
+}
+
+.settings {
+  margin-bottom: 10%;
+  font-size: 1.5em;
   padding: 10px;
+}
+
+/* test */
+.tx-wrap {
+  background: #d5d5d5;
+  width: 85%;
+  height: 19vw;
+  border-radius: 5px;
+  margin: 1vw auto;
+}
+
+div.tx-wrap p span {
+  padding: 2vw;
+}
+
+.tx-span {
+  padding: 2vw;
+}
+
+.tx-detail {
+  font-size: .8em;
+  margin-top: 0;
 }
